--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <p class="description">Senior developer Python 🐍</p>
         </div>
         <div class="links">
-            <a href="https://example.com" target="_blank" class="link link-1">Youtube</a>
-            <a href="https://example.com" target="_blank" class="link link-2">Instagram</a>
+            <a href="https://m.youtube.com/@ElMundoCurioso-ELMC" target="_blank" class="link link-1">Youtube</a>
+            <a href="https://www.instagram.com/dario.btrn/" target="_blank" class="link link-2">Instagram</a>
             <a href="https://example.com" target="_blank" class="link link-3">Servidor discord</a>
         </div>
 
