--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
                 <img src="profile.jpg" alt="Foto de perfil" class="profile-img">
             </a>
             <h1 class="name">FaZe_DaRiuS</h1>
+            <p id="visit-counter" class="visit-counter"></p> <!-- Contador de visitas -->
             <p class="description" style="margin-bottom: 15px;">
                 🌍 <strong>Country:</strong> Spain 🇪🇸<br>
                 🗣️ <strong>Language:</strong> Spanish<br><br>
                 💻 <strong>Senior developer:</strong> Python 🐍<br>
                 🌐 <strong>Junior developer:</strong> HTML, CSS y JS 🚀
             </p>
-
         </div>
         <div class="links">
             <a href="https://m.youtube.com/@ElMundoCurioso-ELMC" target="_blank" class="link link-1">Youtube</a>
             <a href="https://www.instagram.com/dario.btrn/" target="_blank" class="link link-2">Instagram</a>
             <a href="https://example.com" target="_blank" class="link link-3">Servidor discord</a>
         </div>
-
         <button id="toggle-theme" class="toggle-theme">🌙</button>
     </div>
 
