--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Link en Bio - FaZe_DaRiuS</title>
-</head>
-
 <body>
     <div class="container">
         <div class="profile">
             <a id="download-link" href="profile.jpg" download="profile.jpg">
                 <img src="profile.jpg" alt="Foto de perfil" class="profile-img">
+                <link rel="stylesheet" href="styles.css">
+
             </a>
             <h1 class="name">FaZe_DaRiuS</h1>
-            <p id="visit-counter" class="visit-counter"></p> <!-- Contador de visitas -->
+            <p id="visit-counter" class="visit-counter"></p>
             <p class="description" style="margin-bottom: 15px;">
                 🌍 <strong>Country:</strong> Spain 🇪🇸<br>
                 🗣️ <strong>Language:</strong> Spanish<br><br>
@@ -31,8 +23,5 @@
         <button id="toggle-theme" class="toggle-theme">🌙</button>
     </div>
 
-    <!-- Enlace al archivo JavaScript -->
     <script src="script.js"></script>
 </body>
-
-</html>
