--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <div class="profile">
             <a id="download-link" href="profile.jpg" download="profile.jpg">
                 <img src="profile.jpg" alt="Foto de perfil" class="profile-img">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link rel="stylesheet" href="styles.css">
 
             </a>
